[package]
name = "imboard"
version = "0.2.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Exchange images with the clipboard."
repository = "https://github.com/moisutsu/imboard"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["clipboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1.0"
anyhow = "1.0.32"
image = "0.23.8"
tokio = { version = "0.2.22", features = ["full"] }
